force-app/main/default/objects/hed__Course_Offering__c/fields/Avg_Grade_Point__c.field-meta.xml
<CustomField>
    <fullName>Avg_Grade_Point__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Average Grade point in the section.</description>
    <inlineHelpText>Average Grade point in the section.</inlineHelpText>
    <label>Average Grade Point</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>