force-app/main/default/objects/hed__Course_Offering__c/fields/Canvas_Section_SIS_Id__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Section_SIS_Id__c</fullName>
    <description>section_sis_id in Canvas</description>
    <externalId>true</externalId>
    <inlineHelpText>section_sis_id in Canvas</inlineHelpText>
    <label>Canvas Section SIS Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>