force-app/main/default/objects/hed__Course_Offering__c/fields/Confirmed_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Enrollments__c</fullName>
    <description>The count of confirmed student course connections. This is set in an after insert/update/delete trigger on Course Connection.</description>
    <inlineHelpText>The count of confirmed student course connections. This is set in an after insert/update/delete trigger on Course Connection.</inlineHelpText>
    <label>Confirmed Enrollments</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>