force-app/main/default/objects/hed__Course_Offering__c/fields/Cross_Listed_To__c.field-meta.xml
<CustomField>
    <fullName>Cross_Listed_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>X-Listing for Offering</description>
    <inlineHelpText>X-Listing for Offering</inlineHelpText>
    <label>Cross Listed To</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Cross Listed Offerings</relationshipLabel>
    <relationshipName>Cross_Listed_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>