force-app/main/default/objects/hed__Course_Offering__c/fields/Cross_Listing__c.field-meta.xml
<CustomField>
    <fullName>Cross_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cross listed with...</description>
    <inlineHelpText>Cross listed with...</inlineHelpText>
    <label>Cross Listing</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Crosslistings_Here</relationshipName>
    <type>Lookup</type>
</CustomField>