force-app/main/default/objects/hed__Course_Offering__c/fields/Is_Available_for_Registration__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_for_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, section is currently available for registration. This is set in a before trigger.</description>
    <inlineHelpText>If true, section is currently available for registration. This is set in a before trigger.</inlineHelpText>
    <label>Is Available for Registration</label>
    <type>Checkbox</type>
</CustomField>