force-app/main/default/objects/hed__Course_Offering__c/fields/Is_Credit__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit__c</fullName>
    <description>Is this section on a credit course?</description>
    <formula>hed__Course__r.RecordType.DeveloperName = &apos;Credit&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this section on a credit course?</inlineHelpText>
    <label>Is Credit</label>
    <type>Checkbox</type>
</CustomField>