force-app/main/default/objects/hed__Course_Offering__c/fields/Minimum_Seats_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Seats_Required__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minimum # of seats required for section to occur.</description>
    <inlineHelpText>Minimum # of seats required for section to occur.</inlineHelpText>
    <label>Minimum Seats Required</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>