force-app/main/default/objects/hed__Course_Offering__c/fields/Open_Entry__c.field-meta.xml
<CustomField>
    <fullName>Open_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an open entry course?</description>
    <inlineHelpText>Is this an open entry course?</inlineHelpText>
    <label>Open Entry</label>
    <type>Checkbox</type>
</CustomField>