force-app/main/default/objects/hed__Course_Offering__c/fields/Pending_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Pending_Enrollments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The count of pending student course connections. This is set in an after insert/update/delete trigger on Course Connection.</description>
    <inlineHelpText>The count of pending student course connections. This is set in an after insert/update/delete trigger on Course Connection.</inlineHelpText>
    <label>Pending Enrollments</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>