force-app/main/default/objects/hed__Course_Offering__c/fields/Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_End_Date__c</fullName>
    <description>Date at which registration ends.</description>
    <inlineHelpText>Date at which registration ends.</inlineHelpText>
    <label>Registration End Date</label>
    <type>Date</type>
</CustomField>