force-app/main/default/objects/hed__Course_Offering__c/fields/Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Start_Date__c</fullName>
    <description>Date at which registration starts.</description>
    <inlineHelpText>Date at which registration starts.</inlineHelpText>
    <label>Registration Start Date</label>
    <type>Date</type>
</CustomField>