force-app/main/default/objects/hed__Course_Offering__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description>Capacity - (Confirmed Enrollments + Pending Enrollments)</description>
    <formula>hed__Capacity__c - Confirmed_Enrollments__c - Pending_Enrollments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Capacity - (Confirmed Enrollments + Pending Enrollments)</inlineHelpText>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>