force-app/main/default/objects/hed__Course_Offering__c/fields/Requires_Canvas__c.field-meta.xml
<CustomField>
    <fullName>Requires_Canvas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this course require an LMS?</description>
    <inlineHelpText>Does this course require an LMS?</inlineHelpText>
    <label>Requires Canvas</label>
    <type>Checkbox</type>
</CustomField>